--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>join thing</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body id="body">
     <div id="app"></div>
     <script src="/main.js"></script>
   </body>
